--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -g bell-action any
 set -g default-terminal screen-256color
 set -g mouse-select-pane off
 unbind home
-set -g prefix `,C-a
+set -g prefix C-a,F13
 bind ` send-prefix
 set -g visual-bell on
 setw -g xterm-keys on
@@ -20,19 +20,17 @@ unbind C-a
 bind c new-window -a
 
 unbind l
-bind C-a last-window
+bind l last-window
 setw -g mode-keys vi
 set-option -g status-keys vi
 
 setw -g mode-mouse on
 
-unbind %
-bind | split-window -h
-bind h split-window -h
-unbind '"'
-bind - split-window -v
-bind v split-window -v
+#bind '\' set  default-path \$(pwd)\; split-window -h
+#bind -   set  default-path \$(pwd)\;  split-window -v
 
+bind '\'  split-window -h
+bind -    split-window -v
 set -g history-limit 8000
 
 unbind o
@@ -63,7 +61,7 @@ bind-key k confirm kill-window
 bind-key K confirm kill-server
 set-window-option -g automatic-rename on
 
-bind / command-prompt "split-window 'exec man %%'"
+#bind m command-prompt 'exec shellrun man %%'
 
 unbind Up
 unbind Down
@@ -78,17 +76,29 @@ unbind F9
 unbind F10
 unbind F11 
 unbind F12
-bind-key -r F9 select-pane -t:.+
-bind-key -r F10 select-pane -t:.-
-bind-key -n F11 prev
+#bind-key -r F9 select-pane -t:.-\; resize-pane -U 4\; resize-pane -L 4\; resize-pane -L 4\; resize-pane -D 4\;
+#resize-pane -D 4 
+#\; resize-pane -L 4 \; resize-pane -R 4
+#bind-key -r F10 select-pane -t:.+\;resize-pane -U 4\; resize-pane -D 4\; resize-pane -L 4\; resize-pane -R 4
+
+unbind i
+unbind o
+bind-key -r i select-pane -t:.-
+bind-key -r o select-pane -t:.+
+#bind-key -r i select-pane -t:.-\; resize-pane -U 4\;
+#bind-key -r o select-pane -t:.+\; resize-pane -U 4\;
+
+
+#bind-key -n F11 run-shell '~/bin/tux tprev'
 #bind-key -n F11 previous-window -a
-bind-key -n F12 next
+#bind-key -n F12 run-shell '~/bin/tux tnext'
 
-set -g base-index 1
-if-shell '! tmux ls | grep -q  uake' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d'
-#if-shell '/bin/true' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d'
-#if-shell '[[ ! tmux ls | grep -q  test ]]' 'new -s test ; neww -t 2 ; neww -d ; neww -d ; neww -d ; neww -d'
+bind-key -n F11 previous-window
+bind-key -n F12 next-window
 
+if-shell '! tmux ls | grep  uake | grep -qv grep' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d; neww -d weechat-curses; neww -d /usr/bin/w3m; neww -d vim'
+
+if-shell '! tmux ls  | grep  nether | grep -qv grep' 'new -d -s nether; neww -t 2; neww -d mutt; neww -d firefox; neww -d newsbeuter;  neww -d ncmpcpp; neww -d atop' 
 
 
 unbind [
@@ -118,6 +128,8 @@ bind-key -t vi-edit Down history-down
 bind-key -t vi-edit C-k delete-line
 bind-key -t vi-copy Right next-word-end #fix this
 bind-key -t vi-copy Left previous-word
+#bind-key -t vi-copy N search-reverse\; send-keys 'Space'\; 
+#next-word-end
 
 #bind-key -t vi-edit BS delete-word
 bind-key C-p pipe-pane -o 'cat >>/tmp/output.#S.#I-#P'
@@ -126,15 +138,36 @@ set -g display-time 5000
 set -g lock-server off 
 set -g lock-command /usr/bin/vlock
 
-unbind s
-bind s set status 
+#unbind s
+#bind s set status 
 
-bind r command-prompt -p "Jump to:"  'find-window %%'
+unbind d
+bind d command-prompt -p "Jump to:"  'run-shell "~/bin/tux tfind %%"'
+
+unbind t
+bind t set status
 
 set -s quiet on
 
 # mine 
 set -g bell-all on
+set -g repeat-time 2000
 
-bind o run tmux-url 
+bind u run tmux-url 
+set -g base-index 1
 
+set -g pane-active-border-fg colour230 
+set -g pane-active-border-bg default
+set -g pane-border-fg colour126
+set -g pane-border-bg default
+
+setw -g main-pane-width 40
+setw -g main-pane-height 40
+unbind a
+bind-key a run-shell '~/bin/tux tbreak'
+#bind-key a break-pane -d 
+
+unbind s
+bind s last-window
+
+#set -g default-path '$PWD'
