--- a/.rtorrent.rc
+++ b/.rtorrent.rc
@@ -1,15 +1,16 @@
-active_fg_color = 4
+#active_fg_color = 4
 #d.ban_slow_peers=min_seeds,min_rate,amount1,time1[,amount2,time2[,...]]
-done_fg_color = 2
-scgi_local = /home/raghavendra/.rtorrent/rpc.socket
+#done_fg_color = 2
+#scgi_local = /home/raghavendra/.rtorrent/rpc.socket
 max_uploads = 8
 download_rate = 0
 upload_rate = 20
-session_on_completion = yes
+#session_save = 
+#session_on_completion = yes
 directory = /home/raghavendra/Downloads
 session = /home/raghavendra/.rtorrent/session
 schedule = watch_directory,5,10,load_start=~/.rtorrent/watch/*.torrent
-schedule = low_diskspace,5,60,close_low_diskspace=100M
+schedule = low_diskspace,5,60,close_low_diskspace=200M
 schedule = session_save,300,300,session_save=
 schedule = untied_directory,5,5,stop_untied=
 system.method.set_key = event.download.finished,notify_me,"execute=/home/raghavendra/bin/notify-send,'rtorrent',$d.get_name="
@@ -23,4 +24,9 @@ peer_exchange = yes
 #hash_read_ahead = 10
 #hash_interval = 100
 #hash_max_tries = 10
+on_start    = link2,"create_link=base_path,,.started"
+on_stop     = link2,"delete_link=base_path,,.started"
+on_finished = link2,"create_link=base_path,,.finished"
+on_erase    = link2,"delete_link=base_path,,.finished"
+system.method.set_key = event.download.finished,move_complete,"execute=/home/raghavendra/bin/r_handler,$d.get_base_path=,/media/Xel/Downloads;d.set_directory=/media/Xel/Downloads/"
 # vim: set syntax=off:
