--- a/.mplayer/config
+++ b/.mplayer/config
@@ -1,47 +1,56 @@
 
 [default]
+gapless-audio=yes
+key-fifo-size=3
 ao=oss
 fixed-vo=no
+#vo=vdpau:hqscaling=1:queuetime_fs=500:output_surfaces=10:sharpen=1:denoise=1,xvmc,gl,xv
+vo=vdpau:hqscaling=1:queuetime_fs=500:output_surfaces=10:denoise=1,xvmc,gl,xv
+vc=ffmpeg12vdpau,ffwmv3vdpau,ffvc1vdpau,ffh264vdpau,ffodivxvdpau,
 #vo=gl
 #vo=gl:yuv=1:rectangle=2:force-pbo,xvmc,xv,fbdev,null
-vo=xv
+#vo=xv
 ontop=yes
-monitoraspect=16:10
+#monitoraspect=1.78
+aspect=1.77
+lavdopts="threads=8:idct=99"
 slices=no
 cache=8192
 cache-min=10
 idx=yes
 stop-xscreensaver=yes
-framedrop=1
+#framedrop=1
 nomouseinput=yes
-hardframedrop=0
+#hardframedrop=0
 channels=2
-af="volnorm=1"
+af="volnorm=2"
+sub-fuzziness=2
 lirc=no
 joystick=no
 softvol=yes
 softvol-max=200
 volume=100
-autoq=100
+#autoq=100
 mc=0.001
 #http://martin.ankerl.com/2006/06/10/pimp-my-mplayer/
 subfont-text-scale=3
-fontconfig=no
+#fontconfig=no
+#ass=no
 #fstype=fullscreen
 
-[nouveau]
-vo=xv
+#[nouveau]
+#vo=xv
 
 [high]
 # run with -profile=default,high
-lavdopts="threads=5"
-vfm=ffmpeg
-vc=ffh264
+#lavdopts="threads=5"
+#vfm=ffmpeg
+#vc=ffh264
 #hardframedrop="0"
 
-[plugin]
-autosync=0
-mc=0
-correct-pts=yes
-nomouseinput=no
+#[plugin]
+#autosync=0
+#mc=0
+#correct-pts=yes
+#nomouseinput=no
 #http://ubuntuforums.org/archive/index.php/t-1154431.html
