--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,173 +1,112 @@
-set -g default-command /bin/zsh
-setw -g utf8 on
-set -g bell-action any
-#set -g visual-content on
-#set -g visual-activity on
-set -g default-terminal screen-256color
-set -g mouse-select-pane off
-unbind home
-set -g prefix C-a,F13
-bind ` send-prefix
-set -g visual-bell on
-setw -g xterm-keys on
-
-unbind C-b
-
-setw -g mode-bg colour36
-setw -g mode-fg colour235
-
-unbind C-a
-bind c new-window -a
-
-unbind l
-bind l last-window
-setw -g mode-keys vi
-set-option -g status-keys vi
-
-setw -g mode-mouse on
-
-#bind '\' set  default-path \$(pwd)\; split-window -h
-#bind -   set  default-path \$(pwd)\;  split-window -v
-
-bind '\'  split-window -h
-bind -    split-window -v
-set -g history-limit 8000
-
+unbind x#{{{
+unbind Up
+unbind t
+unbind s
+unbind Right
+unbind p
 unbind o
-set -g set-titles on
-set -g set-titles-string "#T"
-set -g status-bg default
-set -g message-bg colour235 
-set -g message-fg green
-#set -g window-status-alert-bg default
-set -g status-fg white
+unbind o
+unbind Left 
+unbind l
+unbind i
+unbind home
+unbind F9 
+unbind F12
+unbind F11 
+unbind F10
+unbind Down
+unbind d
+unbind C-b
+unbind C-a
+unbind a
+unbind ]
+unbind [
+unbind '\;' 
+unbind /#}}}
+
+setw -g automatic-rename on#{{{
+setw -g xterm-keys on
+setw -g window-status-fg colour244
+setw -g window-status-current-fg colour44
+setw -g window-status-current-bg default
+setw -g utf8 on
+setw -g mode-mouse on
+setw -g mode-keys vi
+setw -g mode-fg colour235
+setw -g mode-bg colour36
+setw -g main-pane-width 40
+setw -g main-pane-height 40
+set -g destroy-unattached off
+setw -g clock-mode-style 24
+setw -g clock-mode-colour green
+set -s quiet on
+set -s exit-unattached off 
+set -g status-keys vi
+set -g visual-bell on
+set -g status-right  '#[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
+set -g status-left '#[fg=green]#H#[default]'
 set -g status-justify centre
 set -g status-interval 20
-set -g status-left '#[fg=green]#H#[default]'
-set -g status-right  '#[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
+set -g status-fg white
+set -g status-bg default
+set -g set-titles-string "#T"
+set -g set-titles on
+set -g repeat-time 2000
+set -g prefix F13,F14
+set -g pane-border-fg colour126
+set -g pane-border-bg default
+set -g pane-active-border-fg colour230 
+set -g pane-active-border-bg default
+set -g mouse-select-pane off
+set -g mouse-utf8 off
+set -g message-fg green
+set -g message-bg colour235 
+set -g lock-server off 
+set -g lock-command /usr/bin/vlock
+set -g history-limit 8000
+set -g display-time 5000
+set -g default-terminal screen-256color
+set -g default-command /bin/zsh
+set -g bell-action any
+set -g bell-both on
+setw -g word-separators ' _@/'
+set -g base-index 1#}}}
 
-setw -g window-status-fg colour244
-#setw -g monitor-activity on
+if-shell '! tmux ls | grep  uake | grep -qv grep' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d; neww -d /usr/bin/vim; neww -d weechat-curses; neww -d /usr/bin/w3m'#{{{
+if-shell '! tmux ls  | grep  nether | grep -qv grep' 'new -d -s nether; neww -t 2; neww -d mutt; neww -d newsbeuter;  neww -d ncmpcpp; neww -d atop; neww -d rtorrent ' #}}}
 
-setw -g window-status-current-bg default
-setw -g window-status-current-fg colour44
-
-# Clock
-setw -g clock-mode-colour green
-setw -g clock-mode-style 24
-unbind x
-bind-key x kill-pane
-bind-key k confirm kill-window
-bind-key K confirm kill-server
-set-window-option -g automatic-rename on
-
-#bind m command-prompt 'exec shellrun man %%'
-
-unbind Up
-unbind Down
-unbind Left 
-unbind Right
-bind-key Up resize-pane -U 2
-bind-key Down resize-pane -D 2
-bind-key Left resize-pane -L 2
-bind-key Right resize-pane -R 2
-
-unbind F9 
-unbind F10
-unbind F11 
-unbind F12
-#bind-key -r F9 select-pane -t:.-\; resize-pane -U 4\; resize-pane -L 4\; resize-pane -L 4\; resize-pane -D 4\;
-#resize-pane -D 4 
-#\; resize-pane -L 4 \; resize-pane -R 4
-#bind-key -r F10 select-pane -t:.+\;resize-pane -U 4\; resize-pane -D 4\; resize-pane -L 4\; resize-pane -R 4
-
-unbind i
-unbind o
-bind-key -r i select-pane -t:.-
-bind-key -r o select-pane -t:.+
-#bind-key -r i select-pane -t:.-\; resize-pane -U 4\;
-#bind-key -r o select-pane -t:.+\; resize-pane -U 4\;
-
-
-#bind-key -n F11 run-shell '~/bin/tux tprev'
-#bind-key -n F11 previous-window -a
-#bind-key -n F12 run-shell '~/bin/tux tnext'
-
-bind-key -n F11 previous-window
-bind-key -n F12 next-window
-
-if-shell '! tmux ls | grep  uake | grep -qv grep' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d; neww -d weechat-curses; neww -d /usr/bin/w3m; neww -d vim'
-
-if-shell '! tmux ls  | grep  nether | grep -qv grep' 'new -d -s nether; neww -t 2; neww -d mutt; neww -d firefox; neww -d newsbeuter;  neww -d ncmpcpp; neww -d atop' 
-
-
-unbind [
-bind-key [ copy-mode\; send-keys '0'
-
-#unbind -t vi-copy Tab
-#bind -t vi-choice Tab choose\; begin-selection\; next-word
-
-unbind /
-bind / copy-mode\; send-keys '?'
-
+bind u run tmux-url #{{{
+bind t set status
+bind '\;' switch-client -n
+bind -    split-window -v
+bind '\'  split-window -h
+bind d last-window
+bind ` send-prefix
+bind p     send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell "curl -s -F sprunge=@/tmp/.tmux-exchange http://sprunge.us | xclip -i" \; display-message "Pasted to sprunge"
 bind Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell 'xclip -i < /tmp/.tmux-exchange'\; display-message "Copied to clipboard"
-bind p     send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell 'gist < /tmp/.tmux-exchange 2>/dev/null'\; display-message "Pasted to gist"
-#bind p     send-keys 'Enter' \; run-shell 'tmux save-buffer | gist 2>/dev/null | xclip -i' \; display-message "Pasted"
-#bind Enter send-keys '.' \; run-shell 'tmux save-buffer | xclip -i' 
-
-#unbind -t vi-copy Space
-#bind -t vi-copy Space copy-mode\; send-keys 'M'\; send-keys '$'\; send-keys 'Space'
-#bind -t vi-copy Space send-keys 'Tab'
-
-
-unbind ]
-bind-key ] paste-buffer
-
+bind l last-window
+bind-key x kill-pane
+bind-key Up resize-pane -U 2
 bind-key -t vi-edit Up history-up
 bind-key -t vi-edit Down history-down
 bind-key -t vi-edit C-k delete-line
 bind-key -t vi-copy Right next-word-end #fix this
 bind-key -t vi-copy Left previous-word
-#bind-key -t vi-copy N search-reverse\; send-keys 'Space'\; 
-#next-word-end
-
-#bind-key -t vi-edit BS delete-word
+bind-key -r o select-pane -t:.+
+bind-key -r i select-pane -t:.-
+bind-key Right resize-pane -R 2
+bind-key ] paste-buffer
+bind-key -n F12 next-window
+bind-key -n F11 previous-window
+bind-key Left resize-pane -L 2
+bind-key k confirm kill-window
+bind-key K confirm kill-server
+bind-key Down resize-pane -D 2
 bind-key C-p pipe-pane -o 'cat >>/tmp/output.#S.#I-#P'
-set -g display-time 5000
-
-set -g lock-server off 
-set -g lock-command /usr/bin/vlock
-
-#unbind s
-#bind s set status 
-
-unbind d
-bind d command-prompt -p "Jump to:"  'run-shell "~/bin/tux tfind %%"'
-
-unbind t
-bind t set status
-
-set -s quiet on
-
-# mine 
-set -g bell-all on
-set -g repeat-time 2000
-
-bind u run tmux-url 
-set -g base-index 1
-
-set -g pane-active-border-fg colour230 
-set -g pane-active-border-bg default
-set -g pane-border-fg colour126
-set -g pane-border-bg default
-
-setw -g main-pane-width 40
-setw -g main-pane-height 40
-unbind a
+bind-key [ copy-mode\; send-keys '0'
 bind-key a run-shell '~/bin/tux tbreak'
-#bind-key a break-pane -d 
+bind s command-prompt -p "Jump to:"  'run-shell "~/bin/tux tfind %%"'
+bind / copy-mode\; send-keys '?'
+bind c new-window -a#}}}
 
-unbind s
-bind s last-window
-
-#set -g default-path '$PWD'
+#vim: fdm=marker:
