--- a/.htoprc
+++ b/.htoprc
@@ -1,18 +1,19 @@
 # Beware! This file is rewritten every time htop exits.
 # The parser is also very primitive, and not human-friendly.
 # (I know, it's in the todo list).
-fields=2 37 0 18 38 39 40 46 47 62 63 1 
+fields=0 48 17 18 38 39 40 2 46 47 49 1 
 sort_key=47
 sort_direction=1
 hide_threads=0
-hide_kernel_threads=0
+hide_kernel_threads=1
 hide_userland_threads=0
 shadow_other_users=0
-highlight_base_name=1
+show_thread_names=0
+highlight_base_name=0
 highlight_megabytes=1
-highlight_threads=1
+highlight_threads=0
 tree_view=0
-header_margin=0
+header_margin=1
 detailed_cpu_time=0
 color_scheme=0
 delay=15
