--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -1,58 +1,65 @@
 "2.3.1 (created: 2010/04/07 18:25:13)
-
+"set hinttimeout=5000
+source ~/.pentadactyl/config
 set verbose=0
 loadplugins
 "set saveform
-command! ir :open read
 set showstatuslinks=command
-"set showstatuslinks=2
-hi BufTabSelected color:blue;font-weight:bold;font-weight:italics
-"hi BufTabLast color:green;font-weight:bold;font-weight:italics
+hi BufTabSelected color: green;font-weight:bold;font-weight:italics
 hi BufTab color:#A8A8A8;font-weight: bold
-set showtabline=0
+set showtabline=never
 
-set shell="zsh"
-
-nnoremap <A-Right> gt
-nnoremap <A-Left> gT
-nnoremap > gt
-nnoremap < gT
-nnoremap l :tabopen! 
-nmap H F17
+set! javascript.options.methodjit.chrome=true
+set strictfocus
+set hintkeys=asdqwe
+set shell="/bin/zsh"
+nmap a gT
+nmap s gt
+nmap L :tabopen!
 nnoremap F f
 nnoremap f F
-nnoremap S <C-c>
+nmap d f
+nmap D F
+nmap <F13> -builtin d
+nmap <F14> -builtin d
+nmap S <C-c>
 nnoremap B :bmarks! -tags<Space>
 nnoremap b :bmark -tags<Space>
 nnoremap P p
 nnoremap p P
-nnoremap <C-p> <C-^>
-nnoremap w <C-b>
-nnoremap s <Space>
-nnoremap <A-Down> <A-i>
-nnoremap <BS> <C-o>
-nmap c g;b
+nmap <C-p> <C-^>
+nmap w <C-b>
+"nmap s <Space>
+nmap <A-Down> <A-i>
+nmap <BS> <C-o>
+nmap <leader>c g;b
+nmap <leader>h :set hlfind!<CR>
+nmap PageUp 10k
+nmap PageDown 10j
+
 
 set defsearch=g
 set editor="urxvt -e /usr/bin/vim -f"
-"set editor="xterm -e /usr/bin/vim -f"
 set runtimepath=/home/raghavendra/.pentadactyl
 
 hi CmdLine font-family: "Dina" !important; color: #afaf87 !important; font-size: 10pt !important; font-weight: normal;
-set guioptions=s
-command! good :javascript dactyl.execute('set nss+=' + buffer.URL)
-command! tgood :javascript dactyl.execute('set nst+=' + buffer.URL)
-command! tbad :javascript dactyl.execute('set nss-=' + buffer.URL)
-command! bad :javascript dactyl.execute('set nss-=' + buffer.URL)
+set guioptions=Cs
+command! -js good options.get("nss").op("+", [buffer.URL])
+command! -js tgood options.get("nst").op("+", [buffer.URL])
+command! -js bad options.get("nss").op("-", [buffer.URL])
+command! -js tbad options.get("nst").op("-", [buffer.URL])
 
 set wildmode=list:full
 set altwildmode=list:longest
 set newtab=all
-
-
+"set! browser.sessionstore.max_tabs_undo=0
+set! browser.sessionstore.max_windows_undo=0
+set! browser.sessionstore.resume_from_crash=false
+set! browser.sessionstore.max_resumed_crashes=0
+"set! nglayout.debug.disable_xul_cache=true
+"set! nglayout.debug.disable_xul_fastload=true
 
 silent bmark http://www.google.com/search?btnI=I%27m+Feeling+Lucky&q=%s -title="Google feeling lucky search" -keyword=googlelucky
-nnoremap h :tabopen googlelucky 
 silent bmark -k=r http://reddit.com/r/%s/
 colorscheme myzenburn
 
@@ -60,103 +67,67 @@ hi Bell display:none
 set showmode
 set titlestring=Firefox
 set newtab=all
-set hintkeys="asdfg;lkjh"
 "autocmd LocationChange 'youtube.com' nnoremap p :ytpause<CR>
 
 noremap <Esc> <C-c><Esc>
 set autocomplete=!/ex/open,!/ex/tabopen,.?
 set complete=sl
-
-
-
-
-javascript <<EOF
-function savesess(){
-var str="";
-for(i=0;i<config.tabbrowser.browsers.length;i++){
-        currentOne = config.tabbrowser.browsers[i].currentURI.spec;
-        if (/^about.*/.test(currentOne)){
-            continue;
-        }
-        //contentTitle
-        str = str + currentOne;
-        str = str + " " + "'" + config.tabbrowser.browsers[i].contentTitle + "'";
-        str = str +"\n";
-}
-
-var tags = [].splice.call(arguments,0);
-var savetime = new Date().getTime();
-
-let profileFile = io.File("/home/raghavendra/.dactyls/sessions/session." + tags + savetime);
-
-try {
-    profileFile.write(str);
-    dactyl.execute('silent !~/bin/notify-send Pentadactyl Session saved');  
-}
-catch (e) {
-    dactyl.echoerr("E190: Cannot open " + profileFile.quote() + " for writing");
-    dactyl.log("Could not write to " + profileFile.path + ": " + e.message); // XXX
-}
-};
-EOF
-
-
-"command! -nargs=*  sess :js savesess() <args>
-
-set tabclose=previous,opener,left,right
-set tabopen=external:start,link:right,orphan:right
+set tabclose=opener,previous,left,right
+set tabopen=external:right,link:right,orphan:right
 "set tabopen=external:start,link:left,orphan:left
 
 autocmd! PageLoad .* silent !echo <url> \| <title> \| $(date -R) >>| /home/raghavendra/.dactyls/history/history &
 autocmd! DownloadPost .* silent !echo <url> \|  $(date -R) >>| /home/raghavendra/.download_history & ; notify-send Firefox <url> Download Complete
-command! -nargs=0 loadsess silent !~/bin/loadutil sess &
-command! -nargs=0 loadhist silent !~/bin/loadutil ist &
+command! -nargs=0 loadsess silent run ~/bin/loadutil sess &
+command! -nargs=0 loadhist silent run ~/bin/loadutil ist &
 
-set buftabs-maxlength=10
+set buftabs-maxlength=15
 
 " Ambiguous setting
 set! browser.tabs.loadDivertedInBackground=false
+set! extensions.checkCompatibility.4.0pre=false
+set! ui.caretWidth=5
+command! -nargs=0 addim :js dactyl.execute('silent run ~/bin/moviemanager add ' + buffer.URL + ' &')
+autocmd! PageLoad http://.*imdb\.*tt[0-9]+/$ silent run ~/bin/moviemanager add <url> stage &!
 
-"command! tgood :javascript dactyl.execute('set nst+=' + buffer.URL)
-command! -nargs=0 addim :js dactyl.execute('silent !~/bin/moviemanager add ' + buffer.URL + ' &')
-
-
-autocmd! PageLoad http://.*imdb\.*tt[0-9]+/$ silent !~/bin/moviemanager add <url> stage &!
-
-javascript <<EOF
-function writemark(){
-
-var tags = [].splice.call(arguments,0);
-
-//let profileFile = io.File("/home/raghavendra/.dactyls/bmark/larks");
-
-let str = buffer.URL + " | " + tags;
-try {
-    //profileFile.append(str);
-    dactyl.execute('silent !/bin/echo ' + str + ' >>| ~/.dactyls/bmark/larks');  
-    dactyl.execute('silent !~/bin/notify-send Pentadactyl ' + str + ' added');  
-}
-catch (e) {
-    dactyl.echoerr("E190: Cannot open " + profileFile.quote() + " for writing");
-    dactyl.log("Could not write to " + profileFile.path + ": " + e.message); // XXX
-}
-};
-EOF
 
 command! -js -nargs=* lark writemark(args)
 command! -js -nargs=*  sess savesess(args)
-"command! -nargs=* lark :js dactyl.execute('!/bin/echo ' + buffer.URL + ' \| '+ <args> +' >> ~/.dactyls/larks')
-"command! -nargs=* larks :js dactyl.execute('silent !echo ' + buffer.URL + ' '+ <args> + ' >>| ~/.dactyl/larks')
-command! -nargs=0 larks silent ~/bin/loadutil lark &   
-"set go=M
+command! -nargs=0 larks silent ~/bin/loadutil lark &
+nmap <leader>l :lark
+nmap <leader>L :larks<CR>
+nmap <leader>s :sess
+nmap <leader>S :loadsess<CR>
+nmap <leader>h :loadhist<CR>
+
+
 
 set novisualbell
 :js dactyl.beep = function () {}
 
 set maxitems=5
-" vim: set ft=vim foldmethod=marker:
 "set! noscript.forbidIFramesContext=0
-set hlsearch
+set hlfind
 
 
-source $HOME/.pentadactyl/mystyle.css
+com! inspector
+   \ -description "Open the DOM inspector for the current window"
+   \ :js window.inspectDOMDocument(document)
+
+style! -name=unfuck-youtube youtube.com <<EOF
+	.homepage-side-block:not(:nth-last-of-type(2)):not(:nth-last-of-type(3))
+	{ display: none !important; }
+EOF
+
+" From stepnem's config 
+set! extensions.mozrepl.autoStart=true
+set! toolkit.storage.synchronous=0
+"set! extensions.mozrepl.initUrl=file:///home/stepnem/dactyl-mozrepl-init.js
+" :extadd http://maglione-k.users.sf.net/mozrepl@hyperstruct.net.xpi
+
+style -name noSync * #sync-status-button { display: none; }
+sty -n bye-jimmy wikibooks.org,wikipedia.org div[id^=JA1banner] { display: none !important; }
+sty -n bye-jimmy -a wikibooks.org,wikipedia.org div[id^=JABanner] { display: none !important; }
+sty -n bye-jimmy -a wikibooks.org,wikipedia.org div[id^=EditorBanner] { display: none !important; }
+source $HOME/.pentadactyl/blank.css
+" vim: set ft=vim fdm=marker:
