--- a/makepkg.conf
+++ b/makepkg.conf
@@ -1,28 +1,76 @@
-DLAGENTS=( 'http::/usr/bin/aria2c --conf-path=/home/raghavendra/config/aria2.conf -m 3 --file-allocation=none -o $(basename %o) %u'
-           'ftp::/usr/bin/aria2c --conf-path=/home/raghavendra/config/aria2.conf -m 3 --file-allocation=none -o $(basename %o) %u'
-           'ftp::/usr/bin/wget -c --passive-ftp -t 3 --waitretry=3 -O %o %u'
-           'http::/usr/bin/wget -c -t 3 --waitretry=3 -O %o %u'
-           'https::/usr/bin/wget -c -t 3 --waitretry=3 --no-check-certificate -O %o %u'
-           'rsync::/usr/bin/rsync -z %u %o'
-           'scp::/usr/bin/scp -C %u %o')
+#
+# /etc/makepkg.conf
+#
 
+#########################################################################
+# SOURCE ACQUISITION
+#########################################################################
+#
+#-- The download utilities that makepkg should use to acquire sources
+#  Format: 'protocol::agent'
+DLAGENTS=('ftp::/usr/bin/wget -c --passive-ftp -t 3 --waitretry=3 -O %o %u'
+          'http::/usr/bin/wget -c -t 3 --waitretry=3 -O %o %u'
+          'https::/usr/bin/wget -c -t 3 --waitretry=3 --no-check-certificate -O %o %u'
+          'rsync::/usr/bin/rsync -z %u %o'
+          'scp::/usr/bin/scp -C %u %o')
+
+# Other common tools:
+# /usr/bin/snarf
+# /usr/bin/lftpget -c
+# /usr/bin/curl
+
+#########################################################################
+# ARCHITECTURE, COMPILE FLAGS
+#########################################################################
+#
 CARCH="x86_64"
-CHOST="x86_64-pc-linux-gnu"        #unknown to pc
+CHOST="x86_64-unknown-linux-gnu"
 
-#CFLAGS="-march=native -O2 -flto -pipe -ffast-math -ftracer  -funswitch-loops -fexcess-precision=fast" 
-#CFLAGS="-march=native -O2 -pipe -ffast-math -ftracer -funswitch-loops" 
-CFLAGS="-march=native -O2 -pipe"
-CXXFLAGS="-march=native -O2 -pipe"
+#-- Exclusive: will only run on x86_64
+# -march (or -mcpu) builds exclusively for an architecture
+# -mtune optimizes for an architecture, but builds for whole processor family
+CFLAGS="-march=native  -O2 -pipe -flto"
+CXXFLAGS="-march=native -O2 -pipe -flto"
+LDFLAGS="-Wl,--hash-style=gnu -Wl,--as-needed"
+#-- Make Flags: change this for DistCC/SMP systems
+MAKEFLAGS="-j8"
 
-
-MAKEFLAGS="-j3"        
-# change commented to j3
-LDFLAGS="-Wl,-O1 -Wl,--as-needed -Wl,--hash-style=gnu -s"   
-
+#########################################################################
+# BUILD ENVIRONMENT
+#########################################################################
+#
+# Defaults: BUILDENV=(fakeroot !distcc color !ccache)
+#  A negated environment option will do the opposite of the comments below.
+#
+#-- fakeroot: Allow building packages as a non-root user
+#-- distcc:   Use the Distributed C/C++/ObjC compiler
+#-- color:    Colorize output messages
+#-- ccache:   Use ccache to cache compilation
+#
 BUILDENV=(fakeroot !distcc color !ccache)
+#
+#-- If using DistCC, your MAKEFLAGS will also need modification. In addition,
+#-- specify a space-delimited list of hosts running in the DistCC cluster.
+#DISTCC_HOSTS=""
 
+#########################################################################
+# GLOBAL PACKAGE OPTIONS
+#   These are default values for the options=() settings
+#########################################################################
+#
+# Default: OPTIONS=(strip docs libtool emptydirs zipman purge)
+#  A negated option will do the opposite of the comments below.
+#
+#-- strip:     Strip symbols from binaries/libraries in STRIP_DIRS
+#-- docs:      Save doc directories specified by DOC_DIRS
+#-- libtool:   Leave libtool (.la) files in packages
+#-- emptydirs: Leave empty directories in packages
+#-- zipman:    Compress manual (man and info) pages in MAN_DIRS with gzip
+#-- purge:     Remove files specified by PURGE_TARGETS
+#
 OPTIONS=(strip docs libtool emptydirs zipman purge)
 
+#-- File integrity checks to use. Valid: md5, sha1, sha256, sha384, sha512
 INTEGRITY_CHECK=(md5)
 #-- Options to be used when stripping binaries. See `man strip' for details.
 STRIP_BINARIES="--strip-all"
@@ -30,13 +78,37 @@ STRIP_BINARIES="--strip-all"
 STRIP_SHARED="--strip-unneeded"
 #-- Options to be used when stripping static libraries. See `man strip' for details.
 STRIP_STATIC="--strip-debug"
-STRIP_DIRS=(bin lib sbin usr/{bin,lib,sbin,local/{bin,lib,sbin}} opt/*/{bin,lib,sbin})
+#-- Manual (man and info) directories to compress (if zipman is specified)
 MAN_DIRS=({usr{,/local}{,/share},opt/*}/{man,info})
-PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
+#-- Doc directories to remove (if !docs is specified)
 DOC_DIRS=(usr/{,local/}{,share/}{doc,gtk-doc} opt/*/{doc,gtk-doc})
+#-- Directories to be searched for the strip option (if strip is specified)
+STRIP_DIRS=(bin lib sbin usr/{bin,lib,lib32,sbin,local/{bin,lib,sbin}} opt/*/{bin,lib,sbin})
+#-- Files to be removed from all packages (if purge is specified)
+PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 
-PACKAGER="Raghavendra D Prabhu <raghuDOTprabhu13AtgmaildOtcom>"
+#########################################################################
+# PACKAGE OUTPUT
+#########################################################################
+#
+# Default: put built package and cached source in build directory
+#
+#-- Destination: specify a fixed directory where all packages will be placed
+#PKGDEST=/home/packages
+#-- Source cache: specify a fixed directory where source files will be cached
+#SRCDEST=/home/sources
+#-- Source packages: specify a fixed directory where all src packages will be placed
+#SRCPKGDEST=/home/srcpackages
+#-- Packager: name/email of the person or organization building packages
+#PACKAGER="John Doe <john@doe.com>"
 
+#########################################################################
+# EXTENSION DEFAULTS
+#########################################################################
+#
+# WARNING: Do NOT modify these variables unless you know what you are
+#          doing.
+#
 PKGEXT='.pkg.tar'
 SRCEXT='.src.tar.gz'
 
